[tool.poetry]
name = "async_tk"
version = "0.1.0"
description = "An asynchronous Tkinter library"
authors = ["Sebastian Michel <sebastian.michel@actain.de>"]
homepage = "https://actain.de/"

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
